--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -195,6 +195,8 @@ html.dark {
 
 html {
   font-size: 16px;
+  height: 100%;
+  overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -204,7 +206,14 @@ body {
   color: $text;
   background-color: $background;
   line-height: 1.6;
-  min-height: 100vh;
+  height: 100%;
+  overflow: hidden;
+}
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 a {
